<resources>
    <string name="app_name">Holigo</string>
    <string name="welcome">WELCOME TO\nHOLIGO</string>
    <string name="welcome_des">Plan your trip and explore your favourite\ndestinations with us.</string>
    <string name="btn1">Get Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in_title">Welcome Back !</string>
    <string name="sign_in_des">Stay signed in with your account\nto make searching easier</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="tip1">You don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Let’s get started</string>
    <string name="sign_up_desc">create your new account and find\nmore beautiful destinations</string>
    <string name="name">Name</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="re_type">Re-type</string>
    <string name="re_type_password">Re-type password</string>
    <string name="accept_term_of_service">Accept term of service</string>
    <string name="have_account">Already have an account?</string>
    <string name="sub_tittlw">Hi, FreanJa</string>
    <string name="tittle">Where would you\nlike to go?</string>
    <string name="popular_des">Popular Destination</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_title">Hawaii</string>
    <string name="place_price">$327</string>
    <string name="ratings">4.5 ratings</string>
    <string name="location">Osenia, America</string>
    <string name="more_detail">More Detail</string>
    <string name="recommended">Recommended</string>
    <string name="ratings_brief">4.3</string>
    <string name="location2">East Java, Indonesia</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="mount_fuji">Mount Fuji</string>
    <string name="location_fuji">Kitayama, Japan</string>
    <string name="brief_intro">The beauty of the Beach in America</string>
    <string name="price">$315</string>
    <string name="for_1_person">For 1 person</string>
    <string name="about_place">About Place</string>
    <string name="detailed_intro">Mount Fuji is a well-known symbol of Japan and is often depicted in works of art and photographs, as well as visited by mountaineers and tourists.</string>
    <string name="length">Length</string>
    <string name="time_length">7 Days</string>
    <string name="limit">Limit</string>
    <string name="people_limit">9 People</string>
    <string name="location_">Location</string>
    <string name="location_3">Kitayama</string>
    <string name="spot_image">Spot Image</string>
    <string name="_12">+12</string>
    <string name="location_map">Location Map</string>
    <string name="trip_in_place">Trip in Place</string>
    <string name="lake_kawaguchi">Lake kawaguchi</string>
    <string name="fujikawaguchiko">Fujikawaguchiko</string>
    <string name="selected_date">Selected Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="selected">Selected</string>
    <string name="total_guest">Total guest</string>
    <string name="travel_with_pets">Travel with pets ?</string>
    <string name="please_check_this_information">Please check this information</string>
    <string name="adults">Adults</string>
    <string name="ages_13_or_above">Ages 13 or above</string>
    <string name="under_ages_2">Under ages 2</string>
    <string name="infant">Infant</string>
    <string name="children">Children</string>
    <string name="ages_2_12">Ages 2 - 12</string>
    <string name="get_the_ticket">get the ticket</string>
    <string name="ticket">Ticket</string>
    <string name="_4_5">4.5</string>
    <string name="continue_to_paymant">Continue To Payment</string>
    <string name="payment_success">Payment Success</string>
    <string name="your_payment_is_complete_please_check_the_notification">Your payment is complete, please\ncheck the notification</string>
    <string name="back_to_home">back to home</string>
    <string name="sign_out">Sign out</string>
    <string name="account_view">Account</string>
    <string name="orders">orders</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="user_name">User name</string>
    <string name="you_new_user_name">You new user name</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="your_new_email_address">Your new Email address</string>
    <string name="zhejiang_china">Zhejiang, China</string>
</resources>