<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="#F2613C"
        />

<!--    <item-->
<!--        android:id="@+id/favorites"-->
<!--        android:icon="@drawable/ic_favorite"-->
<!--        android:title="@string/favorites"-->
<!--        app:cnb_iconColor="#F2613C"-->
<!--        />-->

    <item
        android:id="@+id/collection"
        android:icon="@drawable/ic_collection"
        android:title="@string/orders"
        app:cnb_iconColor="#F2613C"
        />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_account"
        android:title="@string/settings"
        app:cnb_iconColor="#F2613C"
        />

</menu>