<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    tools:context=".Activities.ModifyPasswordActivity"
    android:background="@drawable/rectangle_9"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_new_user_name"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center"
        android:textAppearance="@style/tittle2"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/password"
        android:autofillHints="password"
        android:fontFamily="@font/nunito_sans_regular"
        android:letterSpacing="0.02"
        android:lineHeight="14dp"
        android:maxLines="1"
        android:textColor="#092C4C"
        android:textColorHint="#ABB3BB"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textWebPassword" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:fontFamily="@font/nunito_sans_regular"
        android:hint="@string/re_type_password"
        android:inputType="textWebPassword"
        android:letterSpacing="0.02"
        android:lineHeight="14dp"
        android:maxLines="1"
        android:textColor="#092C4C"
        android:textColorHint="#ABB3BB"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/sava"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:gravity="center"
            android:textColor="#FFB600"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="#FFB600"/>


    </LinearLayout>


</LinearLayout>