<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.CusDialogActivity"
    android:layout_width="360dp"
    android:layout_height="520dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/rectangle_9"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:src="@drawable/success_illustration"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/payment_success"
        android:textAppearance="@style/tittle3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_regular"
        android:text="@string/your_payment_is_complete_please_check_the_notification"
        android:textAppearance="@style/text16"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_back_home"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/gradual_yellow"
        android:fontFamily="@font/nunito_sans_bold"
        android:letterSpacing="0.03"
        android:text="@string/back_to_home"
        android:textColor="#54480C"
        android:textSize="14sp" />

</LinearLayout>