<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome_bg" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/wel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="28sp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/welcome"
            android:gravity="center"
            android:textColor="#092C4C"
            android:layout_below="@+id/icon"
            android:layout_marginTop="36dp"
            android:letterSpacing="0.03"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/welcome_des"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="#092C4C"
            android:layout_below="@id/wel_title"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.02"/>

        <Button
            android:id="@+id/btn2login"
            android:layout_width="327dp"
            android:layout_height="52dp"
            android:background="@drawable/gradual_yellow"
            android:text="@string/btn1"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="#54480C"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:letterSpacing="0.03"/>



    </RelativeLayout>

</LinearLayout>