<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_gravity="center"
        >

        <RelativeLayout
            android:id="@+id/card_background"
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:background="@drawable/hawaii1"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/ellipse_35"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/ellipse_35">

                    <ImageView
                        android:id="@+id/vector"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        />


                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="162dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rectangle_1"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="12dp"
                    >

                    <TextView
                        android:id="@+id/place_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:text="@string/place_title"
                        android:textAppearance="@style/tittle2" />

                    <TextView
                        android:id="@+id/place_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:text="@string/place_price"
                        android:textAppearance="@style/tittle2" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_star"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/ratings"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/ratings"
                        android:textAppearance="@style/ratings"
                        android:gravity="top"
                        android:fontFamily="@font/nunito_sans_regular"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_location"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/place_location"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/location"
                        android:textAppearance="@style/ratings"
                        android:gravity="top"
                        android:fontFamily="@font/nunito_sans_regular"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_more"
                    android:layout_width="192dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:background="@drawable/gradual_yellow"
                    android:text="@string/more_detail"
                    android:textAppearance="@style/button2"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:textColor="#54480C"
                    android:letterSpacing="0.03"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="12dp"
                    />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>